// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`github Check existing pull requests 1`] = `
{
  "octokit": [
    [
      {
        "auth": "asdf",
      },
    ],
  ],
  "pulls.list": [
    [
      {
        "head": "oooo:env/foo",
        "owner": "oooo",
        "repo": "rrrr",
        "state": "open",
      },
    ],
  ],
}
`;

exports[`github Invalid Repo 1`] = `
{
  "octokit": [
    [
      {
        "auth": "asdf",
      },
    ],
  ],
}
`;

exports[`github Open a pull request 1`] = `
{
  "issues.update": [
    [
      {
        "issue_number": 123,
        "labels": [
          "mergeback",
        ],
        "owner": "oooo",
        "repo": "rrrr",
      },
    ],
  ],
  "octokit": [
    [
      {
        "auth": "asdf",
      },
    ],
  ],
  "pulls.create": [
    [
      {
        "base": "some-base",
        "head": "some-head",
        "owner": "oooo",
        "repo": "rrrr",
        "title": "some-title",
      },
    ],
  ],
}
`;

exports[`github Submit a PR rejection 1`] = `
{
  "octokit": [
    [
      {
        "auth": "asdf",
      },
    ],
    [
      {
        "auth": "asdf",
      },
    ],
    [
      {
        "auth": "asdf",
      },
    ],
  ],
  "pulls.createReview": [
    [
      {
        "body": "fooo",
        "event": "APPROVE",
        "owner": "oooo",
        "pull_number": 123,
        "repo": "rrrr",
      },
    ],
    [
      {
        "body": "fooo",
        "event": "REQUEST_CHANGES",
        "owner": "oooo",
        "pull_number": 123,
        "repo": "rrrr",
      },
    ],
    [
      {
        "body": "fooo",
        "event": "COMMENT",
        "owner": "oooo",
        "pull_number": 123,
        "repo": "rrrr",
      },
    ],
  ],
}
`;
